--- a/index.html
+++ b/index.html
@@ -87,25 +87,26 @@
 
       <!-- service 3 -->
       <div class="service">
-          <div class="background1">
-            <div class="background-content">
-              <h2>Graphic design</h2>
-              <p>
-                Great design makes you memorable. We deliver artwork that
-                underscores your brand message and captures potential clients’
-                attention.
-              </p>
-            </div>
-          </div>
-          <div class="background2">
-            <div class="background-content">
-              <h2>Photography</h2>
-              <p>
-                Increase your credibility by getting the most stunning,
-                high-quality photos that improve your business image.
-              </p>
+        <div class="background1">
+          <div class="background-content">
+            <h2>Graphic design</h2>
+            <p>
+              Great design makes you memorable. We deliver artwork that
+              underscores your brand message and captures potential clients’
+              attention.
+            </p>
           </div>
         </div>
+        <div class="background2">
+          <div class="background-content">
+            <h2>Photography</h2>
+            <p>
+              Increase your credibility by getting the most stunning,
+              high-quality photos that improve your business image.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- testimonial section -->
@@ -136,7 +137,7 @@
           <img src="./images/image-jennie.jpg" alt="Jennie" />
           <p>
             Incredible end result! Our sales increased over 400% when we worked
-            with Sunnyside. Highly  recommended!
+            with Sunnyside. Highly recommended!
           </p>
           <h3>Jennie F.</h3>
           <span>Business Owner</span>
@@ -180,8 +181,8 @@
         <i class="fab fa-twitter"></i>
         <i class="fab fa-pinterest"></i>
       </div>
-    </section>
-    
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
